GNOME Bugzilla – Bug 707332
videoencoder: doesn't check for invalid duration
Last modified: 2013-09-18 16:50:40 UTC
Created attachment 253908 [details] [review] Patch it clips buffer with invalid duration resulting in cstop being GST_CLOCK_TIME_NONE and then later uses cstop in calculation.
commit d03feedf4c15e4af7b4ffed4b073772825797b6d Author: Matej Knopp <matej.knopp@gmail.com> Date: Tue Sep 3 00:47:18 2013 +0200 videoencoder: Check for invalid stop position before calculating a duration from it https://bugzilla.gnome.org/show_bug.cgi?id=707332 (Checking if cstart is valid was not necessary)