videoencoder: Check for invalid stop position before calculating a duration from it

https://bugzilla.gnome.org/show_bug.cgi?id=707332